style.css
/* ... */
@font-face {
    font-family: Monsterrat-regular; /* Гарнитура шрифта */
    src: url(src/fonts/Monsterrat-regular.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Raleway-bold; /* Гарнитура шрифта */
    src: url(src/fonts/Raleway-bold.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Raleway-thin; /* Гарнитура шрифта */
    src: url(src/fonts/Raleway-thin.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Raleway-extralight; /* Гарнитура шрифта */
    src: url(src/fonts/Raleway-extralight.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Raleway-medium; /* Гарнитура шрифта */
    src: url(src/fonts/Raleway-medium.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Raleway-light; /* Гарнитура шрифта */
    src: url(src/fonts/Raleway-light.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Raleway-regular; /* Гарнитура шрифта */
    src: url(src/fonts/Raleway-regular.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Tw-Cen; /* Гарнитура шрифта */
    src: url(src/fonts/Tw\ Cen\ MT\ Condensed\ Bold.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: GreatLakes; /* Гарнитура шрифта */
    src: url(src/fonts/Greatlakes.ttf); /* Путь к файлу со шрифтом */
}
@font-face {
    font-family: Lato-bold; /* Гарнитура шрифта */
    src: url(src/fonts/Lato-bold.ttf); /* Путь к файлу со шрифтом */
}
body {
    margin: 0 auto;
}
.wrapper{
    max-width: 1668px;
    margin: 0 auto;
}

/*getting-part*/
.getting-part{
    position: relative;
    height: 1190px;
    background: url(src/imgs/getting-bcg.png) no-repeat #eae2d1;
    background-size: cover;
}
.header{
    display: flex;
    justify-content: space-between;
    font-family: Monsterrat-bold, sans-serif;
    padding: 55px 0 0 120px;
}
.site-name{
    font-size: 35px;
    letter-spacing: 7px;
    color: #ffffff;
    background-color: #000000;
    margin-top: 3px;
    padding: 26px 23px;
}
.menu-btn{
    height: 20px;
    width: 60px;
    border-top: 5px solid #ffffff;
    border-bottom: 5px solid #ffffff;
    padding: 7px 0;
    margin: 13px 120px 0 0;
}
.menu-btn p{
    line-height: 19px;
    font-size: 18px;
    letter-spacing: 1px;
    color: #ffffff;
    margin: 0;
}
.tagline{
    height: 828px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-right: 58px;
    padding-top: 18px;
}
.title-tagline{
    width: 100%;
    height: 261px;
    font-family: Raleway-thin, sans-serif;
    font-size: 261px;
    text-align: end;
    letter-spacing: 28px;
    color: #ffffff;
    margin: 0;
}
.description-tagline{
    width: 100%;
    font-family: Raleway-bold, sans-serif;
    font-size: 78px;
    text-align: end;
    letter-spacing: 7px;
    color: #ffffff;
    margin: 0;
    padding: 10px 51px 0 0;
}
.btns-tagline{
    height: 92px;
}
.btns-tagline{
    display: flex;
    justify-content: center;
    align-items: center;
}
.btns-tagline div{
    height: 20px;
    width: 20px;
    background-color: #000000;
    border-radius: 50%;
    margin: 0 14px;
}
#active-btn-tagline{
    background-color: #ffffff;
}

/*menu*/
.wrapper-menu{
    display: none;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #000000;
    opacity: 0.9;
}
.menu{
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 210px 0 0 350px;
}
.menu > li {
    font-family: Raleway-bold, sans-serif;
    font-size: 40px;
    letter-spacing: 5px;
    color: #bebcb8;
    list-style: none;
}
.menu > li:not(:first-child){
    margin-top: 25px;
}
.menu > li:hover{
    color: #ffffff;
    border-bottom: 1px solid #ffffff;
}
.home-menu{
    width: 9%;
}
.about-menu{
    width: 16%;
}
.categories-menu{
    width: 19%;
}
.gallery-menu{
    width: 13.5%;
}
.events-menu{
    width: 11.8%;
}
.blog-menu{
    width: 8%;
}
.contact-menu{
    width: 19.5%;
}
.btn-close-menu{
    position: absolute;
    top: 1%;
    right: 14%;
    font-family: Raleway-regular, sans-serif;
    color:#ffffff;
}
.btn-close-menu:hover{
 
}
.btn-close-menu p{
    margin: 0;
    padding: 0;
}
.btn-close-menu p:first-child{
    font-size: 50px;
    text-align: center;
}
.btn-close-menu p:last-child{
    font-size: 13px;
    letter-spacing: 2px;
}
.toggler{
    width: 60px;
    height: 60px;
    position: absolute;
    top: 5%;
    right: 12.25%;
    z-index: 0;
    opacity: 0;
}
.toggler:hover{
    cursor: pointer;
}
.toggler:checked{
    top: 1.5%;
    right: 13.5%;
    z-index: 1;
}
.toggler:checked ~ .wrapper-menu{
    display: block;
}

/*description*/
.description{
    height: 615px;
    text-align: center;
    background-color: #ffffff;
    padding: 91px 0;
}
.description .wrapper{
    display: flex;
    flex-direction: column;
    align-content: center;
}
.description h3, .description h2, .description p, .description span{
    margin: 0;
}
.description h3{
    font-weight: normal;
    font-family: Raleway-extralight, sans-serif;
    font-size: 70px;
    letter-spacing: 0.7px;
}
.description h2{
    font-family: Raleway-bold, sans-serif;
    font-size: 71px;
    letter-spacing: 1px;
}
.description-rights{
    display: block;
    font-family: Raleway-medium, sans-serif;
    font-size: 24px;
    padding: 39px 0px;
}
.description-line {
    width: 96px;
    height: 2px;
    background-color: #000000;
    margin: 0 auto;
    margin-top: 49px;
}
.comment{
    width: 1096px;
    font-family: Raleway-medium, sans-serif;
    font-size: 23px;
    line-height: 36px;
    word-spacing: -0.2px;
    word-break: break-all;
    margin: 0 auto;
    margin-top: 28px;
}
.comment p:nth-child(2){
   margin-top: 35px;
}

/*lecture*/
.lecture{
    height: 775px;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
}
/* ... */

